# supSec

./: .gitignore  .supsec.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: supsec-report.md
examples/clean/: Dockerfile
examples/vulnerable/: .supsec.yaml  Dockerfile  deploy.sh  deploy.yaml  docker-compose.yml  main.tf
examples/vulnerable/.github/workflows/: ci.yml
scripts/: install-hook.sh
src/supsec/: __init__.py  cli.py  config.py  engine.py  fixer.py  models.py
src/supsec/reporters/: __init__.py  base.py  console.py  json_reporter.py  markdown.py  sarif.py
src/supsec/rules/: __init__.py
src/supsec/scanners/: __init__.py  base.py  compose.py  dockerfile.py  github_actions.py  kubernetes.py  secrets.py  shell.py  terraform.py
tests/: test_compose_scanner.py  test_config.py  test_dockerfile_scanner.py  test_engine.py  test_fixer.py  test_github_actions_scanner.py  test_json_reporter.py  test_kubernetes_scanner.py  test_reporters.py  test_rules_catalog.py  test_secrets_scanner.py  test_shell_scanner.py  test_terraform_scanner.py
