[tool.poetry]
name = "supsec"
version = "0.1.0"
description = "DevSecOps scanner — finds security issues in Dockerfiles, CI configs, Terraform, and source code"
authors = ["Jorge Munoz"]
readme = "README.md"
packages = [{ include = "supsec", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.0"
rich = "^13.9.0"
pyyaml = "^6.0"
pydantic = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.7.0"

[tool.poetry.scripts]
supsec = "supsec.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
