[project]
name = "supsec"
version = "0.1.0"
description = "DevSecOps scanner — finds security issues in Dockerfiles, CI configs, Terraform, and source code"
authors = [{ name = "Jorge Munoz" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[project.scripts]
supsec = "supsec.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supsec"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501", "B008", "UP042"]  # E501: formatter handles; B008: Typer pattern; UP042: keep str+Enum for readability

[tool.pytest.ini_options]
testpaths = ["tests"]
